--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,21 @@ build/
 
 poetry.toml
 Pipfile
+msgq
+rednose
+teleoprtc
+tinygrad
+openpilot/common
+openpilot/selfdrive
+openpilot/system
+openpilot/third_party
+openpilot/tools
+third_party/acados/aarch64
+third_party/acados/larch64/lib/libqpOASES_e.so
+third_party/acados/x86_64/lib/libqpOASES_e.so
+third_party/libyuv/aarch64
+third_party/libyuv/x86_64/include
+third_party/maplibre-native-qt/aarch64
+third_party/maplibre-native-qt/x86_64/lib/libQMapLibre.so
+third_party/snpe/larch64
+third_party/snpe/x86_64
